Small styling changes and fix the ranked/graved pages not showing a table anymore

--- a/src/App.scss
+++ b/src/App.scss
@@ -56,7 +56,7 @@ div.ui.selection.dropdown div.text {
   width: calc(100% - 80px);
   align-self: center;
   margin: 2vh auto;
-  padding: 1vh 1vw;
+  padding: 10px 10px;
   background-color: $background-colour-darker;
 }
 
